# ShapePackingPPO

./: .env  .gitignore  .pylintrc  __init__.py  actor_critic.py  env.py  main.py  ppo.py  pyproject.toml
data/: data_reader.py  reader.py
inputs/: input.txt
model/: env.py  ppo.py  ppo_config.py
model/actor/: __init__.py  actor.py
model/actor/feature_modules/: feature_extractor.py  film.py  grid_features.py  present_features.py
model/actor/selection_modules/: position_selection.py  present_selection.py  td_utils.py
model/actor/transforms/: transform_dims.py
model/config/: ppo_config.py
model/critic/: __init__.py  critic.py
model/critic/feature_modules/: value.py
model/datatypes/: action.py  state.py
model/env/: __init__.py  env.py  env_transform.py  transform_dims.py
model/modules/: __init__.py  actor.py  actor_critic.py  critic.py  feature_extractor.py
model/modules/actor_modules/: actor.py  position_selection.py  present_selection.py  td_utils.py
model/modules/critic_modules/: critic.py
model/modules/feature_modules/: film.py  grid_features.py  present_features.py
model/modules/features/: feature_extractor.py  film.py  present_features.py
model/saved_models/: model_data.py  model_data_wrapper.py  save_manager.py
