[project]
name = "shapepackingppo"
version = "0.1.1"
description = "Shape packing algorithm"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "tensordict>=0.10.0",
    "torch>=2.10.0",
    "torchrl>=0.10.1",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


